// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooterFarButtons with isCardFooterCollapsed=false renders per snapshot with allCardInteractionsSupported and test-kebabmenuarialabel aria label passed as prop: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <span>
    <CustomizedActionButton onClick={[Function (anonymous)]} text=\\"File issue\\" iconProps={{...}} className=\\"fileissue\\" componentRef={[Function: componentRef]} />
  </span>
  <span>
    <CustomizedActionButton onClick={[Function: onClick]} text=\\"Copy failure details\\" iconProps={{...}} className=\\"copyfailuredetails\\" componentRef={[undefined]} />
  </span>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=false renders per snapshot with allCardInteractionsSupported and undefined aria label passed as prop: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <span>
    <CustomizedActionButton onClick={[Function (anonymous)]} text=\\"File issue\\" iconProps={{...}} className=\\"fileissue\\" componentRef={[Function: componentRef]} />
  </span>
  <span>
    <CustomizedActionButton onClick={[Function: onClick]} text=\\"Copy failure details\\" iconProps={{...}} className=\\"copyfailuredetails\\" componentRef={[undefined]} />
  </span>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=false renders per snapshot with allCardInteractionsSupported: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <span>
    <CustomizedActionButton onClick={[Function (anonymous)]} text=\\"File issue\\" iconProps={{...}} className=\\"fileissue\\" componentRef={[Function: componentRef]} />
  </span>
  <span>
    <CustomizedActionButton onClick={[Function: onClick]} text=\\"Copy failure details\\" iconProps={{...}} className=\\"copyfailuredetails\\" componentRef={[undefined]} />
  </span>
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=false renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <span>
    <CustomizedActionButton onClick={[Function: onClick]} text=\\"Copy failure details\\" iconProps={{...}} className=\\"copyfailuredetails\\" componentRef={[undefined]} />
  </span>
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported and test-kebabmenuarialabel aria label passed as prop: action button menu props 1`] = `
Object {
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "componentRef": [Function],
      "iconProps": Object {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported and test-kebabmenuarialabel aria label passed as prop: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton componentRef={[Function: componentRef]} className=\\"kebabMenuButton\\" ariaLabel=\\"test-kebabmenuarialabel\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported and undefined aria label passed as prop: action button menu props 1`] = `
Object {
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "componentRef": [Function],
      "iconProps": Object {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported and undefined aria label passed as prop: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton componentRef={[Function: componentRef]} className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported: action button menu props 1`] = `
Object {
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "componentRef": [Function],
      "iconProps": Object {
        "iconName": "ladybugSolid",
      },
      "key": "fileissue",
      "onClick": [Function],
      "text": "File issue",
    },
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with allCardInteractionsSupported: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton componentRef={[Function: componentRef]} className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" menuIconProps={{...}} menuProps={{...}} />
  <IssueFilingDialog deps={{...}} isOpen={false} selectedIssueFilingService={{...}} selectedIssueData={{...}} selectedIssueFilingServiceData={{...}} onClose={[Function (anonymous)]} issueFilingServicePropertiesMap={{...}} afterClosed={[Function: afterClosed]} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported: action button menu props 1`] = `
Object {
  "className": "kebabMenu",
  "directionalHint": 6,
  "items": Array [
    Object {
      "iconProps": Object {
        "iconName": "copy",
      },
      "key": "copyfailuredetails",
      "onClick": [Function],
      "text": "Copy failure details",
    },
  ],
  "shouldFocusOnMount": true,
}
`;

exports[`CardFooterFarButtons with isCardFooterCollapsed=true renders per snapshot with onlyUserConfigAgnosticCardInteractionsSupported: component snapshot 1`] = `
"<div onKeyDown={[Function: handleKeyDown]}>
  <CustomizedActionButton componentRef={[Function: componentRef]} className=\\"kebabMenuButton\\" ariaLabel=\\"More actions\\" menuIconProps={{...}} menuProps={{...}} />
  <Toast deps={{...}} timeoutLength={6000} />
</div>"
`;
